<resources>
    <string name="app_name">hydrogen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="phone_number">phone number</string>
    <string name="password">password</string>
    <string name="name">name</string>
    <string name="phone_authCode">authenticate code</string>
    <string name="action_sign">sign</string>
    <string name="attention_empty_name">attention name is empty</string>
    <string name="attention_empty_password">password is empty</string>
    <string name="attention_consistency_password">password not consistency</string>
    <string name="attention_empty_email">attention email is empty</string>
    <string name="email">email</string>
    <string name="attention_name_exist">attention name exist</string>
    <string name="attention_email_exist">attention email exist</string>
    <string name="attention_phone_exist">attention phone number exist</string>
    <string name="wrong_name_password">name or password may wrong</string>

    <string name="profile">profile</string>
    <string name="sign">sign</string>

    <string name="IAttendedFragment_name">I attended topics</string>
    <string name="IAttended_open">open</string>
    <string name="IAttended_closed">closed</string>
    <string name="PublishedClosedFragment_name">published closed mic</string>
    <string name="PublishedOpenedFragment_name">published open mic</string>
    <string name="create_activity_name">create</string>
    <string name="action_ok">OK</string>
    <string name="action_publish">publish</string>
    <string name="item_topic_setting">mic setting</string>
    <string name="button_ok">OK</string>
    <string name="dialog_topic_setting_name">Name</string>
    <string name="dialog_topic_setting_brief">Brief</string>
    <string name="dialog_topic_setting_setting">Setting</string>
    <string name="dialog_sent">send</string>

    <string name="topic_bottom_record_layout_pressToRecord">按住录音</string>
    <string name="action_close">close</string>

    <string name="bottom_bar_pre">pre</string>
    <string name="bottom_bar_play">play</string>
    <string name="bottom_bar_next">next</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="item_add">add</string>
    <string name="nav_account_address">address book</string>
    <string name="hy_chat_record_button_releaseToCancel">loose thumb, cancel record</string>
    <string name="hy_chat_record_button_slideUpToCancel">slide up, cancel send</string>
    <string name="hy_chat_record_button_pleaseSayMore">speak more</string>
    <string name="hy_chat_cancelRecord">cancel recording</string>
    <string name="item_participant">participant</string>

    <string name="menu_item_can_publish">publish</string>
    <string name="menu_item_can_open">open</string>
    <string name="menu_item_can_close">close</string>
    <string name="menu_item_can_delete">delete</string>
    <string name="menu_item_can_participant">participant</string>
    <string name="menu_item_can_setupinfo">setupinfo</string>
    <string name="menu_item_can_update">update</string>
    <string name="menu_item_can_recommend">recommend</string>
    <string name="Warning">Wanning</string>
    <string name="PermissionNotGrant">Not grant</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="action_like">like</string>
</resources>
