<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_signUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/fragment_signUp_avatar"
        android:layout_width="@dimen/sign_logo"
        android:layout_height="@dimen/sign_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        app:srcCompat="@drawable/ic_sign_messaging" />

    <LinearLayout
        android:id="@+id/fragment_signUp_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_signUp_avatar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@android:color/background_light"
        android:elevation="2dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/fragment_signUp_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/name"
            android:gravity="center"
            android:ems="10" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <EditText
                android:id="@+id/fragment_signUp_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:gravity="center"
                android:ems="10"
                android:inputType="textPassword" />
            <ImageButton
                android:id="@+id/fragment_signUp_eyeShow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_button_eyeoff"
                android:layout_marginLeft="-24dp"
                android:background="@android:color/transparent"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <EditText
                android:id="@+id/fragment_signUp_password2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:gravity="center"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>
        <EditText
            android:id="@+id/fragment_signUp_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/email"
            android:gravity="center"
            android:drawablePadding="8dp"
            android:ems="10"/>
    </LinearLayout>

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/fragment_signUp_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_signUp_profile"
        android:layout_centerHorizontal="true"
        android:elevation="5dp"
        android:layout_marginTop="-18dp"
        android:text="@string/sign_up"  />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/fragment_signUp_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_signUp_signUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in" />

    <View
        android:layout_width="1dp"
        android:layout_marginRight="-1dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:background="@color/divider" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="-1dp"
        android:layout_alignParentBottom="true"
        android:background="@color/divider" />

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        layout="@layout/layout_loading_spinner"/>
</RelativeLayout>

