<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUp_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/signUp_fragment_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <LinearLayout
        android:id="@+id/signUp_fragment_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUp_fragment_avatar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@android:color/background_light"
        android:elevation="2dp"

        android:orientation="vertical">

        <EditText
            android:id="@+id/signUp_fragment_stageName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/name"
            android:gravity="center"
            android:ems="10"
            android:inputType="phone" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <EditText
                android:id="@+id/signUp_fragment_phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:gravity="center"
                android:ems="10"
                android:inputType="textPassword" />
            <ImageButton
                android:id="@+id/signUp_fragment_send"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_button_send"
                android:layout_marginLeft="-24dp"
                android:background="@android:color/transparent"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <EditText
                android:id="@+id/signUp_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:gravity="center"
                android:ems="10"
                android:inputType="textPassword" />
            <ImageButton
                android:id="@+id/signUp_fragment_eyeShow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_button_eyeoff"
                android:layout_marginLeft="-24dp"
                android:background="@android:color/transparent"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <EditText
                android:id="@+id/signUp_fragment_password2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:gravity="center"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>
        <EditText
            android:id="@+id/signUp_fragment_authCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/phone_authCode"
            android:gravity="center"
            android:drawablePadding="8dp"
            android:ems="10"
            android:inputType="phone" />
    </LinearLayout>

    <Button style="@style/Widget.AppCompat.Button"
        android:id="@+id/signUp_fragment_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUp_fragment_profile"
        android:layout_centerHorizontal="true"
        android:elevation="5dp"
        android:layout_marginTop="-18dp"
        android:text="@string/sign_up"
        android:theme="@style/PrimaryButton"/>

    <Button
        android:id="@+id/signUp_fragment_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUp_fragment_signUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in"
        android:theme="@style/PrimaryFlatButton"/>

    <ImageButton
        android:id="@+id/signUp_fragment_navigateUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_button_arrowdown" />

    <View
        android:layout_width="1dp"
        android:layout_marginRight="-1dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:background="@color/divider" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="-1dp"
        android:layout_alignParentBottom="true"
        android:background="@color/divider" />
</RelativeLayout>

